<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorLightBackground"
    android:orientation="vertical"
    android:paddingTop="@dimen/poi_padding_top">

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#D9DDE1" />

    <LinearLayout
        android:id="@+id/leftLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:padding="18dp">

        <TextView
            android:id="@+id/previousPOIFooter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dimension_text_size"
            android:text="@string/poi_previous" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_chevron_right_black_24dp"
            android:tint="#D9DDE1" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#D9DDE1" />

    <LinearLayout
        android:id="@+id/rightLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:padding="18dp">

        <TextView
            android:id="@+id/nextPOIFooter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dimension_text_size"
            android:text="@string/poi_next" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_chevron_right_black_24dp"
            android:tint="#D9DDE1" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#D9DDE1" />

    <Button
        android:id="@+id/backToSectionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="32dp"
        android:paddingBottom="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="20dp"
        android:text="@string/poi_back_to_overview"
        android:textSize="@dimen/dimension_text_size_small"
        android:textStyle="bold" />

</LinearLayout>