<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.activity.DownloadActivity">

    <TextView
        android:id="@+id/txtTourTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingTop="@dimen/tour_title_padding_top"
        android:gravity="center_horizontal"
        style="@style/TourTitle"/>

    <TextView
        android:id="@+id/txtTourDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTourTitle"
        android:paddingTop="@dimen/tour_desc_padding_top"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:id="@+id/CenterLayout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_above="@+id/bottomText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp">

        <LinearLayout
            android:id="@+id/imageOptionLayout"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/imageOptionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download_option_image"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/imageOptionCaptionEditText"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:text="@string/download_option_image_label"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/imageOptionSizeEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="size"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/videoOptionLayout"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/videoOptionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download_option_video"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/videoOptionCaptionEditText"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:text="@string/download_option_video_label"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/videoOptionSizeEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="size"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/bottomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
