<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_alignParentTop="true">


    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?android:attr/actionBarSize"
            app:titleTextColor="@android:color/white"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            android:elevation="4dp"
            android:textAlignment="center" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/txtTourDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="clip_vertical"
            style="@style/summaryScreen"
            android:padding="16dp" />

        <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_gravity="center_horizontal" />

        <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/tourCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                android:elevation="8dp"
                android:visibility="visible"
                android:layout_gravity="center_vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/summary_activity_estimated_time"
                        android:id="@+id/txtEstimatedTime"
                        android:padding="12dp" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/updateTourLayout">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/summary_activity_version_is_current"
                            android:id="@+id/txtVersion"
                            android:layout_weight="1"
                            android:padding="12dp" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/updateTour"
                            android:layout_gravity="center_vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/summary_activity_update_tour"
                                android:id="@+id/updateTourText"
                                android:padding="12dp"
                                android:visibility="gone"
                                android:layout_gravity="center_vertical" />
                            <ImageButton
                                android:id="@+id/updateTourButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@mipmap/ic_check_black_24dp"
                                android:tint="#00ff0f"
                                android:background="@null"
                                android:visibility="visible"
                                android:layout_gravity="center_vertical" />
                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/summary_activity_expires_in"
                        android:id="@+id/txtExpiry"
                        android:padding="12dp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="right"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/summary_activity_start_tour"
                    android:id="@+id/buttonStartTour"
                    android:layout_gravity="right"
                    android:textColor="@color/colorWhiteText" />
            </LinearLayout>
    </LinearLayout>


</LinearLayout>
